Navigation small bug fixes

--- a/storyblok/Navigation/Navigation.scss
+++ b/storyblok/Navigation/Navigation.scss
@@ -1,3 +1,10 @@
+body.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 .navigation {
   border-bottom: 0.5px solid #0082FF;
 
@@ -107,7 +114,7 @@
   &-mobile {
     &__menu {
       background-color: #0082FF;
-      height: calc(100% - 63px);
+      height: calc(100% - 56px);
       padding: 16px;
     }
 
